app/assets/stylesheets/video/videopost.css
.video-submit {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* align-content: center; */
    position: relative;
    min-height: 370px;
    padding: 16px 24px 0 24px;
    box-sizing: border-box;
    border: 1px solid grey;
    background-color: rgba(28, 28, 28, 0.8);
    color: white;
    border-radius: 5px;
    width: 380px;
    height: 50px;
    margin: 0 auto;
    bottom: -150px 

}

.video-post-title-submit {
    background-color: grey;
    border: 1px solid white;

}

